Move subnav to global styles

--- a/static/navbar/index.html
+++ b/static/navbar/index.html
@@ -59,6 +59,37 @@
           </ul>
         </nav>
       </div>
+
+      <div class="site-sub-nav">
+        <nav class="navbar navbar-expand-md navbar-light">
+
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#siteSpecificNavigation" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            <span class="site-nav-label">Site Menu</span>
+          </button>
+
+          <div class="collapse navbar-collapse site-sub-navbar" id="siteSpecificNavigation">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="index.html">Home</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Components
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="">Buttons</a>
+                  <a class="dropdown-item" href="">Global Top Bar and Footer</a>
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="">Color Palette</a>
+              </li>
+
+            </ul>
+          </div>
+        </nav>
+      </div>
     </header>
 
     <div class="container mt-3">
